Wed Dec 22 12:59:57 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.h:
        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component_exec.cpp:
          Resolved memory leaks.

Wed Dec 22 12:34:50 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Write_T.cpp:
          Layout changes

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.h:
          Removed unused class variables.

        * connectors/dds4ccm/tests/SharedDomainParticipant/SameDatatype/Component/Component_exec.cpp:
          Resolved memory leaks.

Wed Dec 22 11:42:32 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver.mpc:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.h:
        * connectors/dds4ccm/examples/Shapes/Receiver/Shapes_Receiver_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender.mpc:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.h:
        * connectors/dds4ccm/examples/Shapes/Sender/Shapes_Sender_exec.cpp:
        * connectors/dds4ccm/examples/Shapes/descriptors/Plan.cdp:
          Rewritten, using the generated executor code.

        * connectors/dds4ccm/tests/ContentFilteredTopic/StateListener/descriptors/run_test.pl:
          Given the application some extra time to run

Tue Dec 21 14:52:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
          Removed implementation of register_type and unregister_type
          since they're pure virtual.

Tue Dec 21 14:21:43 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Receiver/I2C_Shapes_Receiver.cpp:
        * connectors/dds4ccm/examples/IDL2CPPWrapper/Shapes/Sender/I2C_Shapes_Sender.cpp: